Fix card spacing so it makes more sense semantically and better matchees the mockup

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,8 @@ body {
   align-items: flex-start;
   text-align: left;
 
-  padding-top: 1rem;
+  /* padding-top: 1rem; */
+  padding: 1rem 0;
 }
 
 .star-emoji {
@@ -136,8 +137,11 @@ li {
 
 .review-card {
   background-color: #FFFFFF;
-  margin: 1rem 0 2.5rem;
-  padding: 1rem;
+  /* margin: 1rem 0 2.5rem; */
+  margin: 0 0 2.5rem;
+  /* padding: 1rem; */
+  /* padding: .5rem 2.5rem 1.5rem; */
+  padding: 1.5rem 2.5rem;
   /* border: solid 1px black; */
   border-radius: 20px;
   box-shadow: 0px 30px 100px 0px rgba(17, 23, 41, 0.05);
@@ -146,7 +150,7 @@ li {
 .review-logo-and-rating {
   display: flex;
   gap: 1rem;
-  padding: 1rem 0;
+  padding: 0 0 1rem;
 }
 
 /* TODO: need the star images to be a little smaller than they currently are; maybe adding padding to it's container will help; or maybe adding padding to this image; not sure if this is the best way to do it; I do think the size of the stars is ok for now */
@@ -186,7 +190,7 @@ img.company-logo {
   font-style: normal;
   font-size: 1rem;
 
-  padding: .5rem 0;
+  padding: .25rem 0 .5rem;
   color: #52525A;
 }
 
